[gd_scene load_steps=27 format=3 uid="uid://r0agos3dx780"]

[ext_resource type="Script" uid="uid://docgf5x4voevf" path="res://player/first_person_controller.gd" id="1_n4j6h"]
[ext_resource type="Script" uid="uid://bund4vdf4u4yo" path="res://common/components/health_component.gd" id="2_cehq5"]
[ext_resource type="Script" uid="uid://d0dbewhb72jh2" path="res://common/components/ability_inventory_component.gd" id="2_iatk6"]
[ext_resource type="Script" uid="uid://dt1p48op4tcvu" path="res://common/components/trigger_fire_component.gd" id="3_aio67"]
[ext_resource type="Script" uid="uid://b5g5owk8uw2u2" path="res://common/components/universal_ammo_component.gd" id="5_bs386"]
[ext_resource type="Script" uid="uid://bpdw05fio7u8e" path="res://common/components/key_inventory_component.gd" id="5_hynqe"]
[ext_resource type="PackedScene" uid="uid://ddrgx7hx1ypm1" path="res://player/weapons/bullet.tscn" id="5_vtoyx"]
[ext_resource type="PackedScene" uid="uid://lbmsr1hnoc77" path="res://player/weapons/decoy_bullet.tscn" id="6_fmphg"]
[ext_resource type="PackedScene" uid="uid://clj2kgl355ryn" path="res://player/weapons/mine_bullet.tscn" id="7_vtoyx"]
[ext_resource type="PackedScene" uid="uid://bjdsn54t3kwwb" path="res://player/weapons/lightning_bullet.tscn" id="8_72dxh"]
[ext_resource type="Texture2D" uid="uid://cauwxvdjywmub" path="res://player/weapons/images/hand_slap.0001.png" id="11_470g2"]
[ext_resource type="Texture2D" uid="uid://c6citgotws0lu" path="res://level/images/keys/yellow-keycard.png" id="11_p4yk0"]
[ext_resource type="Texture2D" uid="uid://bnhb7cx23h67x" path="res://level/images/keys/red-keycard.png" id="11_rvvfq"]
[ext_resource type="Texture2D" uid="uid://d3fjfa3au7002" path="res://player/weapons/images/hand_slap.0002.png" id="12_5m7pa"]
[ext_resource type="Texture2D" uid="uid://ypplchc2cg2t" path="res://player/weapons/images/hand_slap.0003.png" id="13_4glfh"]
[ext_resource type="Texture2D" uid="uid://yeh7i38cnpbr" path="res://level/images/keys/blue-keycard.png" id="13_ki3sp"]
[ext_resource type="Texture2D" uid="uid://c65a14v7j7okc" path="res://player/weapons/images/hand_slap.0004.png" id="14_g1af4"]
[ext_resource type="Texture2D" uid="uid://7ytuf20stf33" path="res://player/weapons/images/hand_slap.0005.png" id="15_50fn8"]
[ext_resource type="Texture2D" uid="uid://dxaswyxov1yrp" path="res://player/weapons/images/hand_slap.0006.png" id="16_1kffd"]
[ext_resource type="Texture2D" uid="uid://bevq8qmn75e0c" path="res://player/weapons/images/hand_slap.0007.png" id="17_mfgqg"]
[ext_resource type="Texture2D" uid="uid://drg0hy3t57kno" path="res://player/weapons/images/hand_slap.0008.png" id="18_4lfhs"]
[ext_resource type="Texture2D" uid="uid://c4c45sal8nsmp" path="res://player/weapons/images/hand_slap.0009.png" id="19_hgh2y"]
[ext_resource type="Texture2D" uid="uid://djbfukjn4h0rr" path="res://player/weapons/images/hand_slap.0010.png" id="20_rwfjx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_21lqr"]
height = 1.8

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_vtoyx"]
points = PackedVector3Array(0, 0, 0, -5, 0, -100, 5, 0, -100, -5, 50, -100, 5, 50, -100)

[sub_resource type="SpriteFrames" id="SpriteFrames_dprww"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_470g2")
}, {
"duration": 1.0,
"texture": ExtResource("12_5m7pa")
}, {
"duration": 1.0,
"texture": ExtResource("13_4glfh")
}, {
"duration": 1.0,
"texture": ExtResource("14_g1af4")
}, {
"duration": 1.0,
"texture": ExtResource("15_50fn8")
}, {
"duration": 1.0,
"texture": ExtResource("16_1kffd")
}, {
"duration": 1.0,
"texture": ExtResource("17_mfgqg")
}, {
"duration": 1.0,
"texture": ExtResource("18_4lfhs")
}, {
"duration": 1.0,
"texture": ExtResource("19_hgh2y")
}, {
"duration": 1.0,
"texture": ExtResource("20_rwfjx")
}],
"loop": false,
"name": &"fire",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_470g2")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[node name="FirstPersonController" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_n4j6h")

[node name="HealthComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_cehq5")
MAX_HEALTH = 100
metadata/_custom_type_script = "uid://bund4vdf4u4yo"

[node name="TriggerFireComponent" type="Node" parent="." node_paths=PackedStringArray("autoaim_region")]
unique_name_in_owner = true
script = ExtResource("3_aio67")
projectile_template = ExtResource("5_vtoyx")
vertical_offset = 0.25
autoaim_region = NodePath("../AutoAimRegion")
metadata/_custom_type_script = "uid://dt1p48op4tcvu"

[node name="UniversalAmmoComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_bs386")
amount = 10
metadata/_custom_type_script = "uid://b5g5owk8uw2u2"

[node name="AbilityInventory" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_iatk6")
abilities = Array[PackedScene]([ExtResource("6_fmphg"), ExtResource("7_vtoyx"), ExtResource("8_72dxh")])
ammo_required = Array[int]([5, 5, 10])
metadata/_custom_type_script = "uid://d0dbewhb72jh2"

[node name="KeyInventoryComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_hynqe")
metadata/_custom_type_script = "uid://bpdw05fio7u8e"

[node name="Camera3D" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_21lqr")
debug_color = Color(0, 0.6, 0.701961, 1)

[node name="AutoAimRegion" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="AutoAimRegion"]
shape = SubResource("ConvexPolygonShape3D_vtoyx")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HurtFlashRect" type="ColorRect" parent="HUD"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="WeaponSprite" type="AnimatedSprite2D" parent="HUD"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(640, 464)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_dprww")
animation = &"fire"
frame = 9
frame_progress = 1.0

[node name="HealthBar" type="ProgressBar" parent="HUD"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -44.0
offset_right = 308.0
offset_bottom = -17.0
grow_vertical = 0
max_value = 1.0

[node name="KeyInventoryContainer" type="HBoxContainer" parent="HUD"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -219.0
offset_top = -80.0
offset_right = -27.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0

[node name="RedKeyIcon" type="TextureRect" parent="HUD/KeyInventoryContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("11_rvvfq")

[node name="YellowKeyIcon" type="TextureRect" parent="HUD/KeyInventoryContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("11_p4yk0")

[node name="BlueKeyIcon" type="TextureRect" parent="HUD/KeyInventoryContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("13_ki3sp")

[node name="AbilityLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="AmmoLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -512.0
offset_top = -24.0
offset_right = -439.0
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 0
text = "1,000,000"
